ProductionBackUp/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Source_Text__c</fullName>
        <label>Account Source Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amdocs_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Amdocs Account ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amdocs_Parent_Account_ID__c</fullName>
        <label>Amdocs Parent Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Latitude__c</fullName>
        <label>Billing Latitude</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Longitude__c</fullName>
        <label>Billing Longitude</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billng_Longitude__c</fullName>
        <label>Billng Longitude</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sub_Type__c</fullName>
        <label>Customer Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Sub_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Intelligence_ID__c</fullName>
        <externalId>true</externalId>
        <label>Marketing Intelligence ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Protected_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protected Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <label>Relationship Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_Owner</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Population__c</fullName>
        <label>Special Population</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Special_Population</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>071</fullName>
                </value>
                <value>
                    <fullName>072</fullName>
                </value>
                <value>
                    <fullName>074</fullName>
                </value>
                <value>
                    <fullName>076</fullName>
                </value>
                <value>
                    <fullName>078</fullName>
                </value>
                <value>
                    <fullName>081</fullName>
                </value>
                <value>
                    <fullName>083</fullName>
                </value>
                <value>
                    <fullName>085</fullName>
                </value>
                <value>
                    <fullName>091</fullName>
                </value>
                <value>
                    <fullName>092</fullName>
                </value>
                <value>
                    <fullName>097</fullName>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>103</fullName>
                </value>
                <value>
                    <fullName>104</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Text__c</fullName>
        <description>This field captures the customer type field data upon lead conversion and pushes it to the OOTB type field via a process builder</description>
        <label>Type Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Comcast_Customer</fullName>
        <active>true</active>
        <label>Comcast Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comcast_Prospect</fullName>
        <active>true</active>
        <label>Comcast Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comcast_Protected_Account</fullName>
        <active>true</active>
        <label>Comcast Protected Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>